RESOLVED FIXED249120
[Win] REGRESSION(257142@main): debug logs aren't output to the debug console because HAVE_ISDEBUGGERPRESENT macro isn't defined
https://bugs.webkit.org/show_bug.cgi?id=249120
Summary [Win] REGRESSION(257142@main): debug logs aren't output to the debug console ...
Fujii Hironori
Reported 2022-12-11 21:28:17 PST
Attachments
Patch (1.74 KB, patch)
2022-12-11 22:20 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2022-12-11 21:30:25 PST
> check_symbol_exists(IsDebuggerPresent debugapi.h var1) This doesn't find it. > check_symbol_exists(IsDebuggerPresent windows.h var1) This finds it. In debugapi.h, IsDebuggerPresent is guarded by a condition: > #if (_WIN32_WINNT >= 0x0400) || (_WIN32_WINDOWS > 0x0400) > WINBASEAPI > BOOL > WINAPI > IsDebuggerPresent( > VOID > ); > > #endif
Fujii Hironori
Comment 2 2022-12-11 21:35:26 PST
I don't know why a Windows API IsDebuggerPresent has to be checked in CMake time. 180570@main (bug#162368) added the check.
Fujii Hironori
Comment 3 2022-12-11 22:20:27 PST
EWS
Comment 4 2022-12-12 12:29:56 PST
Committed 257751@main (cce0a08316e8): <https://commits.webkit.org/257751@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 464001 [details].
Note You need to log in before you can comment on or make changes to this bug.