[Win] REGRESSION(257142@main): debug logs aren't output to the debug console because HAVE_ISDEBUGGERPRESENT macro isn't defined https://bugs.webkit.org/show_bug.cgi?id=249120

Reviewed by Don Olmstead.

After 257142@main changed WEBKIT_CHECK_HAVE_FUNCTION, it failed to
detect a Windows API IsDebuggerPresent. There is no reason we have to
detect the API in CMake time.

* Source/WTF/wtf/PlatformHave.h:
* Source/cmake/OptionsCommon.cmake:

Canonical link: https://commits.webkit.org/257751@main